[package]
name = "ecs_ai_compliance"
version = "0.1.0"
edition = "2024"

[dependencies]
hecs = "0.10.5"
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.0"
crossbeam-channel = "0.5.14"
tui = "0.19"
crossterm = "0.28.1"
ctrlc = "3.4.5"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
